--- a/index.html
+++ b/index.html
@@ -313,16 +313,16 @@
 
         <div class="section-title">
           <h2>Portfolio</h2>
-          <p>In my free time, I help my wife design websites and products</p>
+          <p>I was granted an auditor practicing certificate by the Ministry of Finance in 2020. I have gone through a number of programming courses and received certificates in website programming, data analysis, machine learning and artificial intelligence.</p>
         </div>
 
         <div class="row" data-aos="fade-up">
           <div class="col-lg-12 d-flex justify-content-center">
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-app">Bathbomb</li>
-              <li data-filter=".filter-card">Soap</li>
-              <li data-filter=".filter-web">ShowerSteamer</li>
+              <li data-filter=".filter-app">Audit</li>
+              <li data-filter=".filter-card">Website programming</li>
+              <li data-filter=".filter-web">Data, Machine Learning, AI</li>
             </ul>
           </div>
         </div>
@@ -331,93 +331,65 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="https://lagobathhome.vn/media/images/candy-crush.jpg" class="img-fluid" alt="">
+              <img src="assets/img/audit-certificate2.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="https://lagobathhome.vn/media/images/candy-crush.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Bubble Bathbomb"><i class="bx bx-plus"></i></a>
+                <a href="#" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Audit certificate"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/img/audit-certificate.jpg" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="#" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Audit certificate"><i class="bx bx-plus"></i></a>
+                <a href="#" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="https://lagobathhome.vn/media/images/shower2.jpg" class="img-fluid" alt="">
+              <img src="assets/img/AI-certificate.JPG" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="https://lagobathhome.vn/media/images/shower2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="ShowerSteamer"><i class="bx bx-plus"></i></a>
-                <a href="https://lagobathhome.vn/blog/ly-do-nen-dung-vien-xong-tam-dung/" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="https://coursera.org/share/6a89360803900bcdd59d47264b6ca6a2" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Artificial intelligence"><i class="bx bx-plus"></i></a>
+                <a href="https://coursera.org/share/346d9781ad0039140948d1ac6969d52a" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="https://lagobathhome.vn/media/images/helo1.jpg" class="img-fluid" alt="">
+              <img src="assets/img/Data-certificate.JPG" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="https://lagobathhome.vn/media/images/helo1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Bubble Bathbomb"><i class="bx bx-plus"></i></a>
-                <a href="https://lagobathhome.vn/blog/bathbomb-da-nang/" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <div class="portfolio-wrap">
-              <img src="https://lagobathhome.vn/media/images/VittaminC.jpg" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="https://lagobathhome.vn/media/images/VittaminC.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Fizzy Bathbomb"><i class="bx bx-plus"></i></a>
-                <a href="https://lagobathhome.vn/blog/bathbomb-da-nang/" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <div class="portfolio-wrap">
-              <img src="https://lagobathhome.vn/media/images/baby_boo.jpg" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="https://lagobathhome.vn/media/images/baby_boo.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Fizzy Bathbomb"><i class="bx bx-plus"></i></a>
-                <a href="https://lagobathhome.vn/blog/bathbomb-da-nang/" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="https://coursera.org/share/d751014e41a130ad027e0ebc15cb8391" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Fizzy Bathbomb"><i class="bx bx-plus"></i></a>
+                <a href="https://coursera.org/share/d751014e41a130ad027e0ebc15cb8391" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
-              <img src="https://lagobathhome.vn/media/images/xa_bong_cafe.jpg" class="img-fluid" alt="">
+              <img src="assets/img/web-certificate.JPG" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="https://lagobathhome.vn/media/images/xa_bong_cafe.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Soap"><i class="bx bx-plus"></i></a>
-                <a href="https://lagobathhome.vn/blog/xabong-danang/" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="https://coursera.org/share/83efc59b89724e85c85d0bf3afd15edf" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Fizzy Bathbomb"><i class="bx bx-plus"></i></a>
+                <a href="https://coursera.org/share/83efc59b89724e85c85d0bf3afd15edf" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
-              <img src="https://lagobathhome.vn/media/images/xa_bong_nghe.jpg" class="img-fluid" alt="">
+              <img src="assets/img/capstone-certificate.JPG" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="https://lagobathhome.vn/media/images/xa_bong_nghe.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Soap"><i class="bx bx-plus"></i></a>
-                <a href="https://lagobathhome.vn/blog/xabong-danang/" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="https://coursera.org/share/13db17b66d32839e39e450d3553f8b7b" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Soap"><i class="bx bx-plus"></i></a>
+                <a href="https://coursera.org/share/13db17b66d32839e39e450d3553f8b7b" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <div class="portfolio-wrap">
-              <img src="https://lagobathhome.vn/media/images/combo1.jpg" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="https://lagobathhome.vn/media/images/combo1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Combo Soap"><i class="bx bx-plus"></i></a>
-                <a href="https://lagobathhome.vn/blog/xabong-danang/" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <div class="portfolio-wrap">
-              <img src="https://lagobathhome.vn/media/images/FB_IMG_1691500552105.jpg" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="https://lagobathhome.vn/media/images/FB_IMG_1691500552105.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Bubble Bathbomb"><i class="bx bx-plus"></i></a>
-                <a href="https://lagobathhome.vn/blog/bathbomb-da-nang/" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
+          
 
         </div>
 
@@ -525,9 +497,11 @@
         </div>
 
       </div>
-    </section><!-- End Contact Section -->
+    </section>
+    <!-- End Contact Section -->
 
-  </main><!-- End #main -->
+  </main>
+  <!-- End #main -->
 
   <!-- ======= Footer ======= -->
   <!-- <footer id="footer">
