--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/audit-certificate2.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="#" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Audit certificate"><i class="bx bx-plus"></i></a>
+                <a href="portfolio-details.html" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Audit certificate"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -343,8 +343,8 @@
             <div class="portfolio-wrap">
               <img src="assets/img/audit-certificate.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="#" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Audit certificate"><i class="bx bx-plus"></i></a>
-                <a href="#" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="portfolio-details.html" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Audit certificate"><i class="bx bx-plus"></i></a>
+                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
