--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/Data-certificate.JPG" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="https://coursera.org/share/d751014e41a130ad027e0ebc15cb8391" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Fizzy Bathbomb"><i class="bx bx-plus"></i></a>
+                <a href="https://coursera.org/share/d751014e41a130ad027e0ebc15cb8391" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Audit"><i class="bx bx-plus"></i></a>
                 <a href="https://coursera.org/share/d751014e41a130ad027e0ebc15cb8391" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -373,7 +373,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/web-certificate.JPG" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="https://coursera.org/share/83efc59b89724e85c85d0bf3afd15edf" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Fizzy Bathbomb"><i class="bx bx-plus"></i></a>
+                <a href="https://coursera.org/share/83efc59b89724e85c85d0bf3afd15edf" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Audit"><i class="bx bx-plus"></i></a>
                 <a href="https://coursera.org/share/83efc59b89724e85c85d0bf3afd15edf" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -460,7 +460,7 @@
                 <p>+84 706 188 364</p>
               </div>
 
-              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3834.5582929231227!2d108.2206157747379!3d16.03649314031426!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x314219e8d99f2d6b%3A0x19d1ac84d7fc5513!2zNjggTMawdSBRdcO9IEvhu7MsIEhvw6AgQ8aw4budbmcgTmFtLCBI4bqjaSBDaMOidSwgxJDDoCBO4bq1bmcgNTkwMDAwLCBWaeG7h3QgTmFt!5e0!3m2!1svi!2s!4v1693543492203!5m2!1svi!2s" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3834.560428196935!2d108.22067877473806!3d16.03638214031718!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3142196284ecc5a9%3A0x8a0c85ce65c7ea9d!2zNjggTMawdSBRdcO9IEvhu7MsIEhvw6AgQ8aw4budbmcgTmFtLCBI4bqjaSBDaMOidSwgxJDDoCBO4bq1bmcgNTkwMDAwLCBWaeG7h3QgTmFt!5e0!3m2!1svi!2s!4v1696385877698!5m2!1svi!2s" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
 
           </div>
