--- a/index.html
+++ b/index.html
@@ -358,6 +358,15 @@
               </div>
             </div>
           </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <div class="portfolio-wrap">
+              <img src="assets/img/python.jpg" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="https://coursera.org/share/dc83d5dbc89622916605de6c78433493" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Artificial intelligence"><i class="bx bx-plus"></i></a>
+                <a href="https://coursera.org/share/dc83d5dbc89622916605de6c78433493" title="More Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
