--- a/index.html
+++ b/index.html
@@ -287,6 +287,8 @@
                 <li>Lead in the audit, tax consulting, price transfer.</li>
                 <li>Size of members : 2 - 6. </li>
                 <li>General accountant for VST Co.,Ltd for 6 years, from 2017 - 2022.</li>
+                <li><a href="https://lagobathhome.vn/">Emmercial project year 2023. </a></li>
+                <li><a href="https://www.n-js.co.jp/product/">Developer - Python language for VST Co.,Ltd year 2021. </a></li>
                 <li>Investment consulting, Immigration, Social insurance.</li>
                 <li>Explain to tax authorities when the company is inspected or examined.</li>
               </ul>
