--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Bui Dang Chi Nghia</h1>
-      <p>I'm <span class="typed" data-typed-items="Accountant, Auditor, Web Developer, Data Engineer"></span></p>
+      <p>I'm <span class="typed" data-typed-items="Chief Accountant, Auditor, Web Developer, Data Engineer"></span></p>
     </div>
   </section><!-- End Hero -->
 
