--- a/index.html
+++ b/index.html
@@ -361,6 +361,16 @@
             </div>
           </div>
 
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/img/financial.JPG" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="https://coursera.org/share/729fade3d895e9cf8e870384b45b4b2f" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Financial certificate"><i class="bx bx-plus"></i></a>
+                <a href="https://coursera.org/share/729fade3d895e9cf8e870384b45b4b2f" title="More Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
               <img src="assets/img/AI-certificate.JPG" class="img-fluid" alt="">
