--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Bui Dang Chi Nghia</h1>
-      <p>I'm <span class="typed" data-typed-items="Chief Accountant, Auditor, Web Developer, Data Engineer"></span></p>
+      <p>I'm <span class="typed" data-typed-items="Auditor, Deputy General Director, Chief Accountant, Web Developer, AI Engineer"></span></p>
     </div>
   </section><!-- End Hero -->
 
@@ -86,7 +86,7 @@
         <div class="section-title">
           <h2>About</h2>
           <p>With 8 years of experience in auditing, accounting, finance, tax, I have obtained the Auditor degree granted by the Ministry of Finance, working as the audit team leader of more than one hundred large and small Company. My current job always requires teamwork and meetings with FDI company leaders. 
-            In addition, I have worked as an General accountant for VST Co.,Ltd for 6 years, from 2017 - 2022.</p>
+            In addition, I have worked as an Chief accountant for VST Co.,Ltd for 6 years, from 2017 - 2022.</p>
         </div>
 
         <div class="row">
@@ -94,7 +94,7 @@
             <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-            <h3>Auditor &amp; General Accountant.</h3>
+            <h3>Senior Auditor &amp; Chief Accountant.</h3>
             <p class="fst-italic">I have many years of experience in finance, auditing and chief accountant.
             </p>
             <div class="row">
@@ -110,8 +110,8 @@
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>30</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bachelor</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>chinghia264@gmail.com</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>nghiaatax@gmail.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>NotAvailable</span></li>
                 </ul>
               </div>
             </div>
@@ -280,14 +280,14 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Senior Auditor</h4>
+              <h4>Senior Auditor - Deputy General Director</h4>
               <h5>2019 - Present</h5>
               <p><em>Company Auditing and Tax Consulting ATAX</em></p>
               <ul>
+                <li>Deputy General Director of ATAX.</li>
+                <li>Chief accountant for VST Co.,Ltd for 6 years, from 2017 - 2022.</li>
                 <li>Lead in the audit, tax consulting, price transfer.</li>
                 <li>Size of members : 2 - 6. </li>
-                <li>General accountant for VST Co.,Ltd for 6 years, from 2017 - 2022.</li>
-                <li><a href="https://lagobathhome.vn/">Emmercial project year 2023. </a></li>
                 <li><a href="https://www.n-js.co.jp/product/">Developer - Python language for VST Co.,Ltd year 2021. </a></li>
                 <li>Investment consulting, Immigration, Social insurance.</li>
                 <li>Explain to tax authorities when the company is inspected or examined.</li>
@@ -491,7 +491,7 @@
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>chinghia264@gmail.com</p>
+                <p>nghiaatax@gmail.com</p>
               </div>
 
               <div class="phone">
