--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
-                <p>Luu Quy Ky Street, Hai Chau District, Danang city, Vietnam</p>
+                <p>Lot A92, 30/4 street, Hai Chau District, Danang city, Vietnam</p>
               </div>
 
               <div class="email">
@@ -500,7 +500,7 @@
                 <p>+84 706 188 364</p>
               </div>
 
-              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3834.560428196935!2d108.22067877473806!3d16.03638214031718!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3142196284ecc5a9%3A0x8a0c85ce65c7ea9d!2zNjggTMawdSBRdcO9IEvhu7MsIEhvw6AgQ8aw4budbmcgTmFtLCBI4bqjaSBDaMOidSwgxJDDoCBO4bq1bmcgNTkwMDAwLCBWaeG7h3QgTmFt!5e0!3m2!1svi!2s!4v1696385877698!5m2!1svi!2s" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3834.4879131705707!2d108.21252977465588!3d16.040151340216564!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x314219eac5b82a03%3A0x696c48ab5a8d986b!2zQ8O0bmcgdHkgVE5ISCBLaeG7g20gdG_DoW4gdsOgIFTGsCB24bqlbiBUaHXhur8gQVRBWA!5e0!3m2!1svi!2s!4v1703602761981!5m2!1svi!2s" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
 
           </div>
